# Motor_Redes_Petri

./: .gitignore  README.md  pyproject.toml
examples/: buffer.json  ciclo_tmuerta.json  cola_recurso.json  hibrido.json  simple_cycle.json
src/petri_matrix_studio/: __main__.py  analysis.py  coverage.py  engine.py  gui.py  io.py  model.py
tests/: test_coverage.py  test_engine.py
